Signed-off-by: hyp <1302745968@qq.com>

--- a/数据库学习记录.md
+++ b/数据库学习记录.md
@@ -339,8 +339,8 @@
    
    实例
    以下文档执行两次插入操作：
-   db.col.insert({name: 'MongoDB 教程', age: 18, flag: true, });
-   db.col.insert({name: 'MongoDB 教程', age: 18, flag: false, });
+   db.col.insert({name: 'MongoDB 教程', age: 18, flag: true, width:30 });
+   db.col.insert({name: 'MongoDB 教程', age: 18, flag: false, width:20});
    db.col.find();
    db.col.remove({name:'MongoDB 教程'}，1); 删除（name=MongoDB 教程）的第一条记录(好像不起作用)
    db.col.remove({name:'MongoDB 教程'}); 删除所有（name=MongoDB 教程）的记录
@@ -369,7 +369,7 @@
    db.col.find({age:18}).pretty()类似：WHERE age=18
    db.col.find({name:"tom",age:18}).pretty()类似：WHERE name='tom' and age=18
    db.col.find({$or:[{name:"tom"},{age:18}]}).pretty()类似：WHERE name='tom' or age=18
-   db.col.find({age:{$gt:50}, $or:[{name:"tom"},{age:18}]}).pretty()类似：WHERE age>50 and (name='tom' or age=18)  
+   db.col.find({width:{$gt:50}, $or:[{name:"tom"},{age:18}]}).pretty()类似：WHERE width>50 and (name='tom' or age=18)  
     ```
 
 | 操作       | 格式                     | 范例                                        | RDBMS中的类似语句   |
