数据库学习记录.md ver1

--- a/数据库学习记录.md
+++ b/数据库学习记录.md
@@ -362,14 +362,18 @@
    query ：可选，使用查询操作符指定查询条件
    projection ：可选，使用投影操作符指定返回的键。查询时返回文档中所有键值， 只需省略该参数即可（默认省略）。
    
-   db.col.find()常规查询
-   db.col.find().pretty()格式化查询
-   db.col.findOne()只返回一个文档
+   db.col.find();常规查询
+   db.col.find().pretty();格式化查询
+   db.col.findOne();只返回一个文档
+   
    带查询条件
-   db.col.find({age:18}).pretty()类似：WHERE age=18
-   db.col.find({name:"tom",age:18}).pretty()类似：WHERE name='tom' and age=18
-   db.col.find({$or:[{name:"tom"},{age:18}]}).pretty()类似：WHERE name='tom' or age=18
-   db.col.find({width:{$gt:50}, $or:[{name:"tom"},{age:18}]}).pretty()类似：WHERE width>50 and (name='tom' or age=18)  
+   db.col.find({age:18}).pretty(); 类似：WHERE age=18
+   db.col.find({name:"tom",age:18}).pretty(); 类似：WHERE name='tom' and age=18
+   db.col.find({$or:[{name:"tom"},{age:18}]}).pretty(); 类似：WHERE name='tom' or age=18
+   db.col.find({width:{$gt:50}, $or:[{name:"tom"},{age:18}]}).pretty(); 类似：WHERE width>50 and (name='tom' or age=18)  
+   
+   db.col.find({}, {name: 1, age: 1}); 返回列name，和 age；类似 select name,age from tab
+   db.col.find({}, {name: 0, age: 0}); 返回除了name，和 age以外的列
     ```
 
 | 操作       | 格式                     | 范例                                        | RDBMS中的类似语句   |
@@ -380,3 +384,60 @@
 | 大于       | `{<key>:{$gt:<value>}}`  | `db.col.find({"likes":{$gt:50}}).pretty()`  | `where likes > 50`  |
 | 大于或等于 | `{<key>:{$gte:<value>}}` | `db.col.find({"likes":{$gte:50}}).pretty()` | `where likes >= 50` |
 | 不等于     | `{<key>:{$ne:<value>}}`  | `db.col.find({"likes":{$ne:50}}).pretty()`  | `where likes != 50` |
+
+####MongoDB 条件操作符
+
+```
+MongoDB中条件操作符有：
+(>) 大于 - $gt
+(<) 小于 - $lt
+(>=) 大于等于 - $gte
+(<= ) 小于等于 - $lte
+db.col.find({"width" : {$gt : 10}}); 查询 width>10
+db.col.find({width : {$lt :30, $gt : 10}}); 查询 width>10并且width<30
+
+db.col.find({"name" : {$type : 2}}) $type表示数据类型
+limit()方法接受一个数字参数，该参数指定从MongoDB中读取的记录条数。
+db.col.find().limit(2) 显示查询文档中的两条记录
+使用skip()方法来跳过指定数量的数据，skip方法同样接受一个数字参数作为跳过的记录条数。
+db.col.find().limit(1).skip(1) 只会显示第二条文档数据
+db.col.find().skip(1)显示第二条以及之后的文档数据
+```
+
+#### MongoDB 排序
+
+```
+使用 sort() 方法对数据进行排序，sort() 方法可以通过参数指定排序的字段，并使用 1 和 -1 来指定排序的方式，其中 1 为升序排列，而 -1 是用于降序排列。
+db.col.find({}).sort({"age":-1}) 按age降序
+db.col.find({}).sort({"age":-1，"name":1}) 按age降序，name升序(实际操作不行)
+skip(), limilt(), sort()三个放在一起执行的时候，执行的顺序是先 sort(), 然后是 skip()，最后是显示的 limit()。
+```
+
+#### MongoDB 索引
+
+```
+语法
+db.collection.createIndex(keys, options)
+语法中 Key 值为你要创建的索引字段，1 为指定按升序创建索引，如果你想按降序来创建索引指定为 -1 即可。
+db.col.createIndex({"name":1})
+createIndex() 方法中也可以设置使用多个字段创建索引（关系型数据库中称作复合索引）。
+db.col.createIndex({"name":1,"age":-1})
+createIndex() 接收可选参数
+db.col.createIndex({name: 1, age: 1}, {background: true})
+```
+#### MongoDB 聚合
+
+```
+MongoDB中聚合(aggregate)主要用于处理数据(诸如统计平均值,求和等)，并返回计算后的数据结果。有点类似sql语句中的 count(*)。
+db.col.aggregate([{$group : {_id : "$name", count : {$sum : 1}}}])
+类似 select name, count(*) from col group by name
+db.col.aggregate([{$group : {_id : "$name", Total : {$sum : "$age"} } }])
+类似 select name, sum(age) from col group by name
+```
+
+#### MongoDB 分片
+
+```
+在Mongodb里面存在另一种集群，就是分片技术,可以满足MongoDB数据量大量增长的需求。
+当MongoDB存储海量的数据时，一台机器可能不足以存储数据，也可能不足以提供可接受的读写吞吐量。这时，我们就可以通过在多台机器上分割数据，使得数据库系统能存储和处理更多的数据。0
+```
