--- a/数据库学习记录.md
+++ b/数据库学习记录.md
@@ -92,7 +92,23 @@
 
 2. ### Postgresql
 
-3. ### MySQL
+3. ### SQL Server
+
+   ``` 
+   进入命令行模式
+   osql  ?/ 查看帮助信息
+   osql -S 【数据库服务器】 -U 【登陆用户名】 -P 【登陆密码】
+   osql -S 192.168.40.242 -U sa -P 123456
+   出现 1> 表示连接成功，这时候你可以输入sql语句来进行操作了。
+   1>use chepaipark
+   请记住在2>时输入GO，执行Sql语句
+   2>go
+   1>select top 10 * from pk_gateio
+   2>go
+   1>
+   ```
+
+4. ### MySQL
 
    show databases;
 
@@ -100,7 +116,7 @@
 
    show tables;
 
-4. ### MongoDB
+5. ### MongoDB
 
    **创建数据目录**
 
@@ -348,7 +364,7 @@
    
    remove() 方法已经过时了，现在官方推荐使用 deleteOne() 和 deleteMany() 方法。
    删除 age 等于 18 的一个文档：
-   db.col.deleteOne( { age: 18 } )
+   db.col.deleteOne( { age : 18 } )
    删除 age 等于 18 的全部文档：
    db.col.deleteMany({ age : 18 })
    如删除集合下全部文档：
@@ -440,4 +456,60 @@ db.col.aggregate([{$group : {_id : "$name", Total : {$sum : "$age"} } }])
 ```
 在Mongodb里面存在另一种集群，就是分片技术,可以满足MongoDB数据量大量增长的需求。
 当MongoDB存储海量的数据时，一台机器可能不足以存储数据，也可能不足以提供可接受的读写吞吐量。这时，我们就可以通过在多台机器上分割数据，使得数据库系统能存储和处理更多的数据。0
+```
+#### MongoDB 备份(mongodump)
+```
+语法
+mongodump命令脚本语法如下：
+>mongodump -h dbhost -d dbname -o dbdirectory
+-h：
+MongDB所在服务器地址，例如：127.0.0.1，当然也可以指定端口号：127.0.0.1:27017
+-d：
+需要备份的数据库实例，例如：test
+-o：
+备份的数据存放位置，例如：c:\data\dump，当然该目录需要提前建立，在备份完成后，系统自动在dump目录下建立一个test目录，这个目录里面存放该数据库实例的备份数据。
+
+实例
+在本地使用 27017 启动你的mongod服务。打开命令提示符窗口，进入MongoDB安装目录的bin目录输入命令mongodump:
+cd C:\Program Files\MongoDB\Server\3.2\bin
+>mongodump
+执行以上命令后，客户端会连接到ip为 127.0.0.1 端口号为 27017 的MongoDB服务上，并备份所有数据到 bin/dump/ 目录中。
+不指定参数就备份所有数据库
+```
+
+#### MongoDB恢复(mongorestore)
+
+```
+MongoDB数据恢复
+mongodb使用 mongorestore 命令来恢复备份的数据。
+语法
+mongorestore命令脚本语法如下：
+>mongorestore -h <hostname><:port> -d dbname <path>
+--host <:port>, -h <:port>：
+MongoDB所在服务器地址，默认为： localhost:27017
+--db , -d ：
+需要恢复的数据库实例，例如：test，当然这个名称也可以和备份时候的不一样，比如test2
+--drop：
+恢复的时候，先删除当前数据，然后恢复备份的数据。就是说，恢复后，备份后添加修改的数据都会被删除，慎用哦！
+<path>：
+mongorestore 最后的一个参数，设置备份数据所在位置，例如：c:\data\dump\test。
+你不能同时指定 <path> 和 --dir 选项，--dir也可以设置备份目录。
+--dir：
+指定备份的目录
+你不能同时指定 <path> 和 --dir 选项。
+
+先删除数据库 myMongoDB
+进入MongoDB安装目录的bin目录输入命令mongorestore:
+cd C:\Program Files\MongoDB\Server\3.2\bin
+>mongorestore
+```
+
+#### MongoDB 监控
+```
+MongoDB中提供了mongostat 和 mongotop 两个命令来监控MongoDB的运行情况。
+需要进入MongoDB安装目录的bin目录
+cd C:\Program Files\MongoDB\Server\3.2\bin
+>mongostat
+ctrl+c退出
+>mongostop
 ```
